--- a/darkilouche.css
+++ b/darkilouche.css
@@ -7,7 +7,7 @@ body {
   font-family: "Droid Sans", Sans-serif;
 }
 
-a { color: #fcaf3e; outline: none; }
+a { /* color: Highlight; */ color: #fcaf3e; outline: none; text-shadow: 0 1px 1px rgba(0,0,0,0.5); }
   a:hover { color: #fff; }
   a:hover, .time a:hover { text-decoration: underline; }
   .time a { color: #666 }
@@ -40,7 +40,7 @@ p { line-height: 125%; }
   padding: 0;
   font-size: 105%;
   font-weight: bold;
-  text-shadow: 0 2px 2px #000;
+  text-shadow: 0 1px 2px rgba(0,0,0,0.5);
   /* sadly this doesn't seem to work
   background: -webkit-gradient(linear, left top, left bottom, from(#fff), to(#aaa));
   -webkit-background-clip: text;
