--- a/darkilouche.css
+++ b/darkilouche.css
@@ -4,7 +4,7 @@ body {
   color: #fff;
   font-size: 9pt;
   font-family: "Droid Sans", Sans-serif;
-  background: url(loading.png) #fff no-repeat center center;
+  background: url(loading.png) #333 no-repeat center center;
 }
 
 a { /* color: Highlight; */ color: #fcaf3e; outline: none; text-shadow: 0 1px 1px rgba(0,0,0,0.5); }
