--- a/gilouche.css
+++ b/gilouche.css
@@ -7,11 +7,9 @@ body {
   background: url(loading.png) #fff no-repeat center center;
 }
 
-a { /* color: Highlight; */ color: #204a87; outline: none; text-shadow: 0 1px 1px rgba(0,0,0,0.1); }
-  a:hover { color: #57900; }
-  a:hover, .time a:hover { text-decoration: underline; }
+a { /* color: Highlight; */ color: #204a87; outline: none; text-shadow: 0 1px 1px rgba(0,0,0,0.1); opacity: 0.8; }
   .time a { color: #666 }
-  .time a:hover { color: #fff; }
+  a:hover { opacity: 1; text-decoration: underline; }
 
 p { line-height: 125%; }
 
