--- a/darkilouche.css
+++ b/darkilouche.css
@@ -65,7 +65,7 @@ p { line-height: 125%; }
   height: 40px;
   background-image: url('');
   background-repeat: no-repeat;
-  -webkit-corner-radius: 3px;
+  -webkit-border-radius: 3px;
   -webkit-background-size: 100% 100%;
   -webkit-box-reflect:below 2px -webkit-gradient(linear, left top, left bottom, from(transparent), color-stop(0.7, transparent), to(rgba(0,0,0, 0.6)));
 }
